--- a/image_reconstruction_lab.ipynb
+++ b/image_reconstruction_lab.ipynb
@@ -45,6 +45,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Download MR raw data\n",
+    "\n",
+    "First we will download the MR raw data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tempfile\n",
+    "import requests\n",
+    "\n",
+    "# define zenodo records URL and create a temporary directory and h5-file\n",
+    "zenodo_url = 'https://zenodo.org/records/14173489/files/'\n",
+    "fname = 'cart_t1.mrd'\n",
+    "data_file = tempfile.NamedTemporaryFile(mode='wb', delete=False, suffix='.h5')\n",
+    "\n",
+    "# %%\n",
+    "# Download raw data using requests\n",
+    "response = requests.get(zenodo_url + fname, timeout=30)\n",
+    "data_file.write(response.content)\n",
+    "data_file.flush()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Read in MR raw data\n",
     "\n",
     "The data which we acquired in the last lecture with the open-source scanner is saved in an open-source vendor-agnostic\n",
@@ -97,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(kdata.header.h1_freq)"
+    "print(kdata.header.lamor_frequency_proton)"
    ]
   },
   {
@@ -135,11 +165,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = acquisition_model.H(kdata.data)\n",
+    "(img,) = acquisition_model.H(kdata.data)\n",
     "\n",
-    "from matplotlib.pyplot import plt \n",
-    "plt.figure() \n",
-    "plt.imshow(img.abs()[0,0,0,...])"
+    "import matplotlib.pyplot as plt \n",
+    "fig, ax = plt.subplots(2,4, squeeze=False)\n",
+    "for idx, cax in enumerate(ax.flatten()):\n",
+    "    cax.imshow(img.abs()[0,idx,0,:,:])"
    ]
   }
  ],
@@ -150,7 +181,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.8"
   }
  },
