--- a/image_reconstruction_lab.ipynb
+++ b/image_reconstruction_lab.ipynb
@@ -35,10 +35,17 @@
    "source": [
     "### Important\n",
     "\n",
-    "If you are running this notebook on binder then everything you need will already be preinstalled. If you are running it\n",
-    "on your local computer or in Google colab then please ensure you have got MRpro (https://github.com/PTB-MR/mrpro) \n",
-    "installed. For Google colab simply run \n",
+    "If you are running it thist notebook for the first time on your local computer or in Google colab then please ensure you have got MRpro (https://github.com/PTB-MR/mrpro) installed. For Google colab simply run \n",
     "```!pip install mrpro```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mrpro"
    ]
   },
   {
@@ -62,7 +69,7 @@
     "# define zenodo records URL and create a temporary directory and h5-file\n",
     "zenodo_url = 'https://zenodo.org/records/14173489/files/'\n",
     "fname = 'cart_t1.mrd'\n",
-    "data_file = tempfile.NamedTemporaryFile(mode='wb', delete=False, suffix='.h5')\n",
+    "data_file = tempfile.NamedTemporaryFile(mode='wb', delete=False, suffix='.mrd')\n",
     "\n",
     "# %%\n",
     "# Download raw data using requests\n",
